# bwa-hbm

./: .gitignore  .gitmodules  README.md  setup_ci.sh  setup_ubuntu.sh
accelerated_bwa_mem/hw/dfaccto_tpl/: .gitignore  LICENSE  README.md  setup.cfg
accelerated_bwa_mem/hw/dfaccto_tpl/dfaccto_tpl/: assignable.py  assignment.py  constant.py  contextrenderer.py  element.py  generic.py  hasprops.py  package.py
accelerated_bwa_mem/hw/dfaccto_tpl/dfaccto_tpl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
accelerated_bwa_mem/hw/dfaccto_tpl/dfaccto_tpl/template/: key.py  rendering.py
accelerated_bwa_mem/hw/dfaccto_tpl/example/: simple.py  simple_types.py
accelerated_bwa_mem/hw/dfaccto_tpl/example/tpl/: entity.vhd.tpl  package.vhd.tpl
accelerated_bwa_mem/hw/dfaccto_tpl/example/tpl/part/: f_handshake_ms.part.tpl  f_handshake_sm.part.tpl  f_logic.part.tpl  f_regmap.part.tpl  f_unsigned.part.tpl  t_handshake.part.tpl  t_integer.part.tpl  t_logic.part.tpl  t_unsigned.part.tpl
bwa/: .gitignore  Makefile  QSufSort.c  QSufSort.h  bamlite.c  bamlite.h  bntseq.c  bntseq.h  bwa.c  bwa.h  bwamem.c  bwamem.h  bwamem_extra.c  bwamem_pair.c  bwape.c  bwase.c  bwase.h  bwaseqio.c  bwashm.c  bwt.c  bwt.h  bwt_gen.c  bwt_lite.c  bwt_lite.h  bwtaln.c  bwtaln.h  bwtgap.c  bwtgap.h  bwtindex.c  bwtsw2.h  bwtsw2_aux.c  bwtsw2_chain.c  bwtsw2_core.c  bwtsw2_main.c  bwtsw2_pair.c  example.c  fastmap.c  is.c  kbtree.h  khash.h  (+23 more)
exploratory_implementations/: burrows_wheeler.cpp  smith_waterman.cpp
oc-accel/: .gitmodules  Makefile  snap_env.sh.bak
scripts/: calculate_index_size.py  (+4 more)
(+434 files in other folders)
