[metadata]
name = dfaccto_tpl
version = attr: dfaccto_tpl.__version__
author = Lukas Wenzel
author_email = lwenzel+dfaccto@lwenzel.de
description = Specify structural hardware designs in Python and generate HDL sources from templates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lw0/dfaccto_tpl
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
